fix - Fixing a styling on mobile and table for skill component

--- a/src/components/skill/style.css
+++ b/src/components/skill/style.css
@@ -1,13 +1,25 @@
 .skill__card {
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 1rem;
-  min-width: 148px;
-  padding: 1rem 1rem;
-  border: 2px solid var(--color-blue-700);
+  padding: 1rem;
+  flex-direction: column;
+  gap: 0.75rem;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid transparent;
   border-radius: var(--border-radius-s);
-  background-color: var(--color-white);
+  background-color: var(--color-gray-200);
+}
+
+.skill__left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.skill__card-icon svg {
+  width: 40px;
+  height: 40px;
 }
 
 .skill__card-header {
@@ -17,39 +29,21 @@
   color: var(--color-blue-700);
 }
 
-.skill__card-icon svg {
-  width: 26px;
-  height: 26px;
-  color: var(--color-black);
-}
-
-.skill__text {
-  margin-right: 1rem;
-  padding: 1rem 2rem;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 24px;
-  background: rgba(153, 153, 153, 0.2);
-  border-radius: var(--border-radius-s);
-  color: var(--color-gray-500);
-}
-
 .skill__count {
   font-size: 24px;
   line-height: 30px;
   font-weight: 700;
-  color: var(--color-blue-700);
+  color: var(--color-blue-700)
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 375px) {
   .skill__card {
-    min-width: 128px;
-    max-width: 100%;
+    gap: 0.5rem;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .skill__left {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
   }
 }
